fix table-striped border collapse

--- a/public/components/_tables.sass
+++ b/public/components/_tables.sass
@@ -18,12 +18,12 @@ table
         color: var(--accent)
         text-decoration: none
         +transition(color .3s)
-
+ 
 table
   th, td
     text-align: left
 
-table:not(.table-bordered)
+table:not(.table-bordered, .table-horizontal-bordered)
   border-spacing: 0 10px
   border-collapse: separate
 
